--- a/Producto/templates/layout/base.html
+++ b/Producto/templates/layout/base.html
@@ -36,6 +36,17 @@
                             <li><a class="dropdown-item" href="{% url 'mostrar_producto' %}">Productos</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Clientes
+                        </a>
+
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{% url 'crear_cliente' %}">Crear Clientes</a></li>
+                            <li><a class="dropdown-item" href="{% url 'mostrar_clientes' %}">Clientes</a></li>
+                        </ul>
+                    </li>
                     {% endif %}
                     <!-- Inicio de secion, Crear usuario y Cerrar sesion -->
                     {% if user.is_authenticated %}
