--- a/Producto/templates/clientes/editar_cliente.html
+++ b/Producto/templates/clientes/editar_cliente.html
@@ -2,32 +2,32 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container my-4">
     <div class="row">
         <div class="col-md-4 offset-md-4">
-                <h1>Editar Cliente</h1>
-            {{error}}
-            <form method="post" action="{% url 'editar_cliente' cliente.id %}">
+            <form method="post" action="{% url 'editar_cliente' cliente.id %}" class="card card-body">
+                <h1 class="text-center">Editar Cliente</h1>
+                {{error}}
                 {% csrf_token %}
 
-                <div style="margin-bottom: 10px;">
+                <div style="margin-bottom: 10px;" >
                     <label for="id_nombre">Nombre:</label>
-                    <input type="text" name="nombre" id="id_nombre" value="{{ cliente.nombre }}">
+                    <input type="text" name="nombre" id="id_nombre" value="{{ cliente.nombre }}" class="form-control">
                 </div>
 
                 <div style="margin-bottom: 10px;">
-                    <label for="id_apellido">Apellid:</label>
-                    <input type="text" name="apellido" id="id_apellido" value="{{ cliente.apellido }}">
+                    <label for="id_apellido">apellido:</label>
+                    <input type="text" name="apellido" id="id_apellido" value="{{ cliente.apellido }}" class="form-control">
                 </div>
 
                 <div style="margin-bottom: 10px;">
                     <label for="id_telefono">Telefono:</label>
-                    <input type="number" name="telefono" id="id_telefono" value="{{ cliente.telefono }}">
+                    <input type="number" name="telefono" id="id_telefono" value="{{ cliente.telefono }}" class="form-control">
                 </div>
 
                 <div style="margin-bottom: 10px;">
                     <label for="id_direccion">Direccion:</label>
-                    <input type="text" name="direccion" id="id_direccion" value="{{ cliente.direccion }}">
+                    <input type="text" name="direccion" id="id_direccion" value="{{ cliente.direccion }}" class="form-control">
                 </div>
 
                 <button type="submit" class="btn btn-dark">Guardar</button>
