--- a/Producto/templates/crear_materiales.html
+++ b/Producto/templates/crear_materiales.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-4 offset-md-4">
             <form method="POST" class="card card-body" action="{% url 'crear_materiales' %}">
-                <h1>Crear Material</h1>
+                <h1 class="text-center">Crear Material</h1>
                 {{error}}
                 {% csrf_token %}
                 {{form}}
