--- a/Producto/templates/editar_material.html
+++ b/Producto/templates/editar_material.html
@@ -2,27 +2,27 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container my-4">
     <div class="row">
         <div class="col-md-4 offset-md-4">
+            <form method="post" action="{% url 'editar_material' material.id %}" class="card card-body">
                 <h1>Modificar material</h1>
-            {{error}}
-            <form method="post" action="{% url 'editar_material' material.id %}">
+                {{error}}
                 {% csrf_token %}
 
                 <div style="margin-bottom: 10px;">
                     <label for="id_nombre">Nombre:</label>
-                    <input type="text" name="nombre" id="id_nombre" value="{{ material.nombre }}">
+                    <input type="text" name="nombre" id="id_nombre" value="{{ material.nombre }}" class="form-control">
                 </div>
 
                 <div style="margin-bottom: 10px;">
                     <label for="id_cantidad_comprada_gramos">Cantidad comprada gramos:</label>
-                    <input type="number" name="cantidad_comprada_gramos" id="id_cantidad_comprada_gramos" value="{{ material.cantidad_comprada_gramos }}">
+                    <input type="number" name="cantidad_comprada_gramos" id="id_cantidad_comprada_gramos" value="{{ material.cantidad_comprada_gramos }}" class="form-control">
                 </div>
 
                 <div style="margin-bottom: 10px;">
                     <label for="id_costo_total">Costo total:</label>
-                    <input type="number" name="costo_total" id="id_costo_total" value="{{ material.costo_total }}">
+                    <input type="number" name="costo_total" id="id_costo_total" value="{{ material.costo_total }}" class="form-control">
                 </div>
 
                 <button type="submit" class="btn btn-dark">Guardar</button>
