--- a/Producto/templates/layout/base.html
+++ b/Producto/templates/layout/base.html
@@ -68,6 +68,17 @@
 
     {% block content %}
     {% endblock %}
+
+
+    <div class="container-fluid fixed-bottom">
+        <div class="row p-3 bg-dark text-white">
+            <div class="col-xs-12">
+                <p class="text-white text-center">Copyright - All rights reserved © 2024 - Luis Chanampa</p>
+            </div>
+        </div>
+    </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
