--- a/Producto/templates/layout/base.html
+++ b/Producto/templates/layout/base.html
@@ -70,8 +70,8 @@
     {% endblock %}
 
 
-    <div class="container-fluid fixed-bottom">
-        <div class="row p-3 bg-dark text-white">
+    <div class="container-fluid fixed-bottom mt-2">
+        <div class="row p-2 bg-dark text-white">
             <div class="col-xs-12">
                 <p class="text-white text-center">Copyright - All rights reserved © 2024 - Luis Chanampa</p>
             </div>
